--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,3 +187,16 @@
 /* html {
   font-size: var(--font-size);
 } */
+
+/* Mevcut global.css kodlarının en altına ekle */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
