--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -197,6 +197,10 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
+
+/* .bg-green-500 {
+  background-color: rgb(217, 90, 150) !important;
+} */
